--- a/app/src/main/res/layout/items_videos_new_2.xml
+++ b/app/src/main/res/layout/items_videos_new_2.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:layout_margin="5dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="3dp">
 
@@ -12,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="5dp"
         >
 
         <RelativeLayout
