--- a/app/src/main/res/layout/fragment_error_occured.xml
+++ b/app/src/main/res/layout/fragment_error_occured.xml
@@ -56,7 +56,7 @@
                 />
 
             <Button
-                android:id="@+id/retry"
+                android:id="@+id/refresh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
