--- a/app/src/main/res/layout/fragement_my_explore_new.xml
+++ b/app/src/main/res/layout/fragement_my_explore_new.xml
@@ -21,7 +21,7 @@
             android:textStyle="bold"
             android:id="@+id/trending"
             android:drawableRight="@drawable/ic_slow_motion_video_black_24dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimaryLight"
             android:paddingRight="3dp"
             android:textColor="@color/white"
             android:layout_weight="2"
@@ -86,6 +86,7 @@
             android:textSize="14sp"
             android:paddingRight="10dp"
             app:iconifiedByDefault="false"
+            android:focusable="false"
             app:queryHint="Search"
             android:gravity="center"
             android:layout_toLeftOf="@id/filterTrend"
@@ -327,5 +328,39 @@
     </LinearLayout>
 
     </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/no_record_card"
+        android:elevation="20dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp">
+
+        <RelativeLayout
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_no_video"
+                android:layout_centerInParent="true"
+                android:id="@+id/no_search"
+                />
+
+            <TextView
+                android:textSize="18sp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/no_search"
+                android:gravity="center"
+                android:text="@string/no_record_found"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
