--- a/app/src/main/res/layout/fragment_no_internet_fragement.xml
+++ b/app/src/main/res/layout/fragment_no_internet_fragement.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:background="#F0F4F7"
     android:layout_height="match_parent"
-    tools:context=".fragement.NoInternetFragement">
+    tools:context=".fragement.NoInternetFragment">
 
     <LinearLayout
         android:weightSum="10"
