--- a/app/src/main/res/drawable/circle_2.xml
+++ b/app/src/main/res/drawable/circle_2.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="#0780c9"/>
+        android:color="#29485a"/>
     <stroke
         android:color="@color/middle_line_and_circle_color"
         android:width="1dp"
