--- a/app/src/main/res/layout/menu_icon_with_divider.xml
+++ b/app/src/main/res/layout/menu_icon_with_divider.xml
@@ -10,6 +10,7 @@
         android:layout_marginRight="10dp"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:src="@drawable/ic_play_button_not_watched"
         android:id="@+id/image"
         />
 
