--- a/app/src/main/res/layout/activity_video_with_comment.xml
+++ b/app/src/main/res/layout/activity_video_with_comment.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
+    android:id="@+id/layout_comment"
     tools:context=".activity.VideoWithComment">
 
 
@@ -71,12 +72,23 @@
 
     </RelativeLayout>
 
+    <Button
+        android:layout_marginLeft="10dp"
+        android:id="@+id/add_to_playlist"
+        android:layout_below="@id/linear_rv"
+        android:background="@android:color/transparent"
+        android:drawableLeft="@drawable/ic_add_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:text="Add To PlayList"
+        android:textColor="@color/black"
+        />
 
     <RelativeLayout
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linear_rv"
+        android:layout_below="@id/add_to_playlist"
         android:id="@+id/linear"
         android:paddingLeft="10dp"
         android:layout_marginBottom="5dp"
