--- a/app/src/main/res/layout/fragment_tutorial.xml
+++ b/app/src/main/res/layout/fragment_tutorial.xml
@@ -38,6 +38,7 @@
 
 
         <ExpandableListView
+            android:visibility="gone"
             android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,6 +50,16 @@
             android:choiceMode="singleChoice"
             android:layout_below="@+id/videoView"
             android:id="@+id/expandableunit" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/videoView"
+            android:id="@+id/videos_rv"
+            />
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
