--- a/app/src/main/res/layout/items_videos_new_2.xml
+++ b/app/src/main/res/layout/items_videos_new_2.xml
@@ -35,7 +35,7 @@
                 android:scaleType="fitXY"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/intro_pic_3"
+                android:src="@drawable/intro_pic_3_ques"
                 />
             <TextView
                 android:id="@+id/duration"
