--- a/app/src/main/res/layout/notification_expanded_layout.xml
+++ b/app/src/main/res/layout/notification_expanded_layout.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp" >
 
@@ -34,8 +34,8 @@
         android:id="@+id/notif_image"
         android:src="@drawable/intro_pic_1"
         android:layout_marginTop="5dp"
-        android:adjustViewBounds="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:scaleType="fitXY"
+        android:layout_width="match_parent"
+        android:layout_height="80dp" />
 
 </LinearLayout>
