--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,20 @@
                 app:layout_constraintHeight_percent="0.7"
                 android:layout_width="match_parent"
                 />
+    <Button
+        android:textSize="12sp"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        app:layout_constraintTop_toBottomOf="@id/intro_viewpager"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        android:background="@android:color/transparent"
+        android:text="PRIVACY POLICY"
+        android:textColor="@color/colorPrimary"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/login_screen_buttons_margin"
+        android:id="@+id/privacy_policy"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -34,6 +48,9 @@
         android:layout_width="match_parent"
         android:layout_height="30dp">
     </LinearLayout>
+
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
