--- a/app/src/main/res/layout/fragment_my_course_tab.xml
+++ b/app/src/main/res/layout/fragment_my_course_tab.xml
@@ -29,7 +29,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/no_course_added"
+                    android:text="You are still to enroll for a course. Please check out our popular premium courses which students love"
                     />
 
                 <ImageView
