--- a/app/src/main/res/layout/fragment_user_suggested.xml
+++ b/app/src/main/res/layout/fragment_user_suggested.xml
@@ -5,29 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragement.user_myprofile_fragments.UserSuggestedFragment">
 
-    <LinearLayout
-        android:id="@+id/user_suggested_zero_items"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_suggested"
-            android:layout_width="150dp"
-            android:layout_height="150dp" />
-
-        <TextView
-            android:text="@string/suggest_user"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:textSize="16sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/webview"
+        />
 
 </FrameLayout>
