--- a/app/src/main/res/layout/item_my_ordered_course.xml
+++ b/app/src/main/res/layout/item_my_ordered_course.xml
@@ -161,15 +161,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="10">
+            android:orientation="horizontal">
 
             <Button
                 android:background="@drawable/border_grey"
                 android:layout_gravity="end"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:textSize="14sp"
-                android:layout_weight="5"
                 android:layout_height="33dp"
                 android:text="Remove"
                 android:id="@+id/remove"
@@ -178,6 +176,7 @@
                 />
 
             <Button
+                android:visibility="gone"
                 android:textStyle="bold"
                 android:background="@drawable/border_grey"
                 android:layout_marginLeft="2dp"
