--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,54 +4,89 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <RelativeLayout
-            android:id="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHeight_percent="0.10" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/intro_viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.7"
-            app:layout_constraintTop_toBottomOf="@id/view" />
+            android:layout_height="match_parent"
+            android:layout_above="@id/privacy_policy"
+            android:layout_alignParentTop="true">
 
 
-        <LinearLayout
-            android:id="@+id/intro_dots"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:visibility="gone"
-            android:orientation="horizontal"
-            app:layout_constraintHeight_percent="0.1"
-            android:gravity="center_horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/intro_viewpager" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_centerInParent="true"
+                android:id="@+id/think_mba_layout"
+                android:layout_height="wrap_content">
+
+            <TextView
+                android:textColor="@color/colorPrimary"
+                android:padding="10dp"
+                android:textSize="22sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/think_mba"
+                android:text="Think"
+                />
+                <TextView
+                    android:textColor="@color/colorPrimary"
+                    android:padding="10dp"
+                    android:textSize="22sp"
+                    android:layout_toRightOf="@id/think_mba"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="MBA"
+                    />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_below="@id/think_mba_layout"
+                android:layout_width="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/think_layout"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:textSize="24sp"
+                    android:textColor="@color/colorPrimary"
+                    android:id="@+id/think_careeranna"
+                    android:text="Think"
+                    />
+
+                <ImageView
+                    android:layout_width="150dp"
+                    android:layout_toRightOf="@id/think_careeranna"
+                    android:layout_height="40dp"
+                    android:src="@drawable/logo_brand"
+                    />
+
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
         <Button
+            android:layout_centerHorizontal="true"
             android:id="@+id/privacy_policy"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
+            android:layout_above="@id/sign_up_and_login"
             android:background="@android:color/transparent"
             android:text="@string/privacy_policy"
             android:textColor="@color/colorPrimary"
-            android:textSize="10sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/intro_dots" />
+            android:textSize="10sp" />
 
         <LinearLayout
+            android:id="@+id/sign_up_and_login"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:weightSum="10"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_alignParentBottom="true">
 
 
             <Button
@@ -79,5 +114,4 @@
 
         </LinearLayout>
 
-    </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
