--- a/app/src/main/res/layout/course_description_card.xml
+++ b/app/src/main/res/layout/course_description_card.xml
@@ -84,7 +84,7 @@
         <TextView
             android:id="@+id/course_instructor"
             android:paddingLeft="2dp"
-            android:text="By Instructor name"
+            android:text="By CareerAnna"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
