--- a/app/src/main/res/layout/fragment_tutorial.xml
+++ b/app/src/main/res/layout/fragment_tutorial.xml
@@ -13,8 +13,7 @@
         <!--android:layout_height="200dp"-->
         <!--android:layout_marginLeft="20dp"-->
         <!--android:layout_marginRight="20dp"-->
-        <!--android:id="@+id/videoView"-->
-        <!--android:layout_below="@id/unitText"-->
+        <!--android:id="@+id/videoView1"-->
         <!--android:layout_marginTop="10dp"-->
         <!--/>-->
 
